[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jumuia-mcp"
version = "0.1.4"
description = "MCP server for Kenya community finance — SACCO finder, chama formation, cooperative benefits, loan guides, and member rights. 5 tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9", "pydantic>=2.0"]

[project.scripts]
jumuia-mcp = "jumuia_mcp.server:mcp.run"

[project.urls]
Homepage = "https://github.com/gabrielmahia/jumuia-mcp"
Documentation = "https://github.com/gabrielmahia/nairobi-stack"
"MCP Registry" = "https://registry.modelcontextprotocol.io"
Datasets = "https://huggingface.co/gmahia"
Evaluation = "https://github.com/gabrielmahia/kipimo"
[tool.setuptools.packages.find]
where = ["src"]
# build: 1782218500
